--- a/style.css
+++ b/style.css
@@ -2,6 +2,21 @@
    Algemene stijlen webshop
    Thema: Paars / Roze
    ----------------------------- */
+.product-wrapper {
+  display: flex;
+  justify-content: center; /* horizontaal centreren */
+  align-items: flex-start;
+  gap: 20px; /* ruimte tussen productkader en afbeelding */
+}
+
+.product-side-image img {
+  max-width: 580px;
+  height: auto;
+  border-radius: 8px;
+  margin-right: 300px; /* <-- hier voeg je ruimte toe */
+}
+
+   
    .winkelwagen-text-content {
   padding: 20px;
 }
